--- a/.env
+++ b/.env
@@ -1,10 +1,24 @@
-AZURE_OPENAI_API_KEY= 65672342343242365ad266bdea567fe4
+AZURE_OPENAI_API_KEY= 283dbfd61a424229bbba73a507c3ab6e
 AZURE_OPENAI_API_TYPE= azure
 OPENAI_API_VERSION= 2024-02-01
-AZURE_OPENAI_API_BASE= https://rag-dev-001.openai.azure.com/
-#AZURE_OPENAI_DEPLOYMENT_NAME= rag-dev-35trubo16k-001
-#AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-16k
-AZURE_OPENAI_DEPLOYMENT_NAME = rag-dev-35turboinstruc-001
-AZURE_OPENAI_MODEL_NAME = gpt-35-turbo-instruct
+#AZURE_OPENAI_API_BASE= https://aoai-eu-rag-dev-001.openai.azure.com/
+AZURE_OPENAI_ENDPOINT ='https://aoai-eu-rag-dev-001.openai.azure.com/'
+
+#####gpt-35-turbo-16k#########
+# AZURE_OPENAI_DEPLOYMENT_NAME = aoai-eu-rag-dev-35trubo16k-002
+# AZURE_OPENAI_MODEL_NAME = gpt-35-turbo-16k
+
+##########gpt-35-turbo-instruct#########
+#AZURE_OPENAI_DEPLOYMENT_NAME = aoai-eu-rag-dev-35turboinstruc-002
+#AZURE_OPENAI_MODEL_NAME = gpt-35-turbo-instruct
+
+##########gpt-text-embedding-large-3t#########
+AZURE_OPENAI_DEPLOYMENT_NAME = aoai-eu-rag-dev-txtembedding-002
+AZURE_OPENAI_MODEL_NAME = text-embedding-3-large
+
 SERPER_API_KEY_INTERNET_SEARCH= 8b97dde0aa23e80b2b14bd9c2c0937796af1eec5
+
+
+PINECONE_API_KEY ="a0fdf126-03fb-4240-bb72-b8945d9c39ea"
+PINECONE_REGION ="us-east-1"
 
